--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,28 @@
 .container {
+
     text-align: center;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 30px; 
+    height: 150px;
+    
 }
+label {
+
+    font-size: 20px;
+
+}
+
 h1 {
+
     text-align: center;
     font-size: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: darkblue
+
 }
 #result {
+
     text-align: center;
+    
 }
