change amount  min range

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -17,7 +17,7 @@
       {% endfor %}
     </select><br>
     <label for="amount"><b>Podaj kwotę:</b></label>
-    <input type="number" placeholder='Kwota'name="amount" required><br>
+    <input type="number" placeholder='Kwota'name="amount" min='0' required><br>
     <button type="submit">Przelicz</button><br><hr>
 
   </form>
